--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"apexcharts": "^4.5.0",
 		"chart.js": "^4.4.8",
+		"nodemailer": "^6.10.0",
 		"svelte-apexcharts": "^1.0.2"
 	}
 }
